# coquic

./: .clang-format  .clang-tidy  .codacy.yml  .dockerignore  .envrc  .eslintrc.json  .gitignore  .prospector.yml  .stylelintrc.json  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  build.zig  flake.nix
.duvet/: .gitignore  config.toml  snapshot.txt
bench/: implementations.json  run-host-matrix.sh
bench/msquic-perf/: Cargo.toml
bench/msquic-perf/src/: main.rs
bench/mvfst-perf/: CMakeLists.txt  mvfst-perf.cpp
bench/s2n-quic-perf/: Cargo.toml
bench/s2n-quic-perf/src/: main.rs
bindings/rust/coquic/: Cargo.toml  README.md  build.rs
bindings/rust/coquic-rs/: Cargo.toml  README.md
bindings/rust/coquic-rs/src/: lib.rs  quic.rs
bindings/rust/coquic/src/: ffi.rs  http3.rs  lib.rs
docs/: README.md  demo-deployment.md  fuzzing-design.md  h3-server-container.md  http3-browser-discovery.md  packaging.md  public-api.md  quic-interop-runner.md  quic-perf.md  rfc9000-implementation-audit.md
fuzz/: README.md
interop/: README.md  entrypoint.sh  run-official.sh
rag/: README.md  pyproject.toml
rag/scripts/: build-index  index-corpus  qdrant-dev  query-rag  run-mcp  run-qa-api
rag/src/coquic_rag/: __init__.py  config.py
rag/src/coquic_rag/cli/: __init__.py  main.py
rag/src/coquic_rag/embed/: __init__.py  provider.py
rag/src/coquic_rag/ingest/: corpus_loader.py
rag/src/coquic_rag/mcp_server/: __init__.py  server.py
rag/src/coquic_rag/qa/: __init__.py  app.py  deepseek_chat.py  filters.py  openrouter_chat.py  service.py
rag/src/coquic_rag/query/: __init__.py  service.py
rag/src/coquic_rag/store/: qdrant_store.py
rag/tests/: conftest.py  fixtures.py  test_cli_build_index.py  test_cli_query.py  test_config.py  test_corpus_loader.py  test_deepseek_chat.py  test_embed_provider.py  test_graph_extractor.py  test_mcp_server.py  test_openrouter_chat.py  test_project_smoke.py  test_qa_app.py  test_qa_filters.py  test_qa_service.py  test_qdrant_dev_cli.py  test_qdrant_store.py  test_query_service.py  test_rfc_parser.py
references/: demo-deployment.md  quic-perf.md  rfc9000-implementation-audit.md
scripts/: build-boringssl-wasm.sh  build-fuzzers.sh  check-bench-implementations.py  check-perf-implementation-releases.py  check-source-file-lengths.sh  collect-fuzz-corpus.sh  compile-commands-from-verbose-cc.py  compliance  fuzz-targets.sh  minimize-fuzz-corpus.sh  prepare-fuzz-corpus.sh  refresh-compile-commands.sh  render-coverage-summary.py  render-interop-results.py  render-perf-comparison.py  render-perf-summary.py  resolve-bench-implementation-version.py  run-afl-fuzzer.sh  run-clang-tidy.sh  run-coverage.sh  run-fuzz-coverage.sh  run-fuzz-smoke.sh  run_endpoint.sh  simulator_setup.sh  update-perf-history.py  wait-for-it.sh  wasm-quic-smoke.mjs
src/: coquic.cpp  coquic.h  main.cpp  main_h3_server.cpp  main_perf.cpp
src/perf/python/: README.md  pyproject.toml
src/perf/python/coquic_python_perf/: __init__.py  client.py  config.py  io.py  server.py
src/perf/rust/: Cargo.toml
src/perf/rust/src/: client.rs  config.rs  io.rs  lib.rs  main.rs  metrics.rs  protocol.rs  server.rs
steward/: README.md  pyproject.toml  steward.example.toml
steward/src/coquic_steward/: __init__.py  cli.py  public_mirror.py
steward/src/coquic_steward/agents/: __init__.py  catalog.py  diagnostics.py  runner.py
steward/src/coquic_steward/core/: __init__.py  config.py  lifecycle.py  models.py  subprocesses.py
steward/src/coquic_steward/execution/: __init__.py  executor.py  review.py  validation.py  worktree.py
steward/src/coquic_steward/orchestration/: __init__.py  daemon.py  lock.py  preflight.py
steward/src/coquic_steward/planning/: __init__.py  planner.py  verifier.py
steward/src/coquic_steward/signals/: __init__.py  collector.py  providers.py
steward/src/coquic_steward/storage/: __init__.py  mappers.py  schema.py  sqlite.py
steward/src/coquic_steward/web/: __init__.py  app.py  runtime.py
steward/tests/: conftest.py  test_clean_steward.py
steward/web-ui/: next.config.ts  package-lock.json  package.json
steward/web-ui/app/: api.ts  code-block.tsx  integration-detail.tsx  layout.tsx  page.tsx  styles.css  task-detail.tsx  timeline.tsx  transcript.tsx  types.ts
steward/web-ui/app/integrations/[integrationId]/: page.tsx
steward/web-ui/app/tasks/[taskId]/: page.tsx
tests/: quic_congestion_test.cpp  quic_core_test.cpp  quic_crypto_stream_test.cpp  quic_demo_channel_test.cpp  quic_frame_test.cpp  quic_http09_client_test.cpp  quic_http09_runtime_test.cpp  quic_http09_server_test.cpp  quic_http09_test.cpp  quic_http3_protocol_test.cpp  quic_http3_qpack_test.cpp  quic_packet_crypto_test.cpp  quic_packet_number_test.cpp  quic_packet_test.cpp  quic_plaintext_codec_test.cpp  quic_protected_codec_test.cpp  quic_qlog_test.cpp  quic_recovery_test.cpp  (+7 more)
tools/rag/: README.md  pyproject.toml
tools/rag/scripts/: build-index  qdrant-dev  query-rag  run-mcp
tools/rag/src/coquic_rag/: config.py
tools/rag/src/coquic_rag/cli/: __init__.py  main.py
tools/rag/src/coquic_rag/embed/: __init__.py  provider.py
tools/rag/src/coquic_rag/graph/: __init__.py  extractor.py
tools/rag/src/coquic_rag/ingest/: __init__.py  models.py  rfc_parser.py
tools/rag/src/coquic_rag/mcp_server/: server.py
tools/rag/src/coquic_rag/query/: service.py
tools/rag/src/coquic_rag/store/: artifacts.py  qdrant_store.py
tools/rag/tests/: test_cli_build_index.py  test_cli_query.py  test_config.py  test_graph_extractor.py  test_mcp_server.py  test_project_smoke.py  test_qdrant_dev_cli.py  test_qdrant_store.py  test_query_service.py  test_rfc_parser.py
(+2401 files in other folders)
