[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coquic-steward"
version = "0.1.0"
description = "Local autonomous maintenance manager for CoQUIC"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic>=2",
  "SQLAlchemy>=2",
  "typer",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
]

[project.scripts]
coquic-steward = "coquic_steward.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
