[package]
name = "msquic-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
msquic-async = { version = "0.4.1", features = ["msquic-2-5-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
