[package]
name = "s2n-quic-perf"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
s2n-quic = { version = "1.81.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
s2n-quic-rustls = "0.81.0"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
