[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coquic-rag"
version = "0.1.0"
description = "Local QUIC RFC knowledge base tooling for coquic"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "qdrant-client",
]

[project.optional-dependencies]
embed = [
  "sentence-transformers",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
