[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coquic-rag"
version = "0.1.0"
description = "Local QUIC RFC knowledge base tooling for coquic"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "qdrant-client",
  "sentence-transformers",
  "torch",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
