[package]
name = "coquic-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Low-level Rust wrappers for the CoQUIC C FFI"
repository = "https://github.com/minhuw/coquic"
links = "coquic"

[lib]
name = "coquic_sys"
path = "src/lib.rs"

[features]
default = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
