[package]
name = "coquic-rust-perf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tokio perf runtime for CoQUIC's Rust QUIC facade"
repository = "https://github.com/minhuw/coquic"

[lib]
name = "coquic_rust_perf"
path = "src/lib.rs"

[[bin]]
name = "coquic-rust-perf"
path = "src/main.rs"

[dependencies]
coquic-rs = { path = "../../../bindings/rust/coquic-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt", "time", "test-util"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
